fixed minor spacing - no scrollbar

--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -21,6 +21,10 @@ h1, h2, h3 {
     margin: 0;
 }
 
+ol {
+    margin: 0;
+}
+
 
 li {
     list-style: none;
